<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.alandwiprasetyo.buildinglayout.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!" />

    <Button
        android:text="@string/scrollview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:id="@+id/btScroolView"
        android:layout_below="@+id/btLinearLayout"
        android:layout_centerHorizontal="true"
        android:onClick="moveToScroolLayout"/>

    <Button
        android:text="@string/transition_acitivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btScroolView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:onClick="moveToTransitionActivity"
        android:id="@+id/btTransitionAcitity" />

    <Button
        android:text="@string/linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:id="@+id/btLinearLayout"
        android:onClick="moveToLinearLayout"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
